@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.1 on Sat Apr 17 14:57:50 2004 -->
+<!-- generated by wxGlade 0.3.2 on Sat Apr 17 17:36:36 2004 -->
 
-<application path="../../resources/dialogs/videocontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0">
+<application path="../../resources/dialogs/videocontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="VideoControlPage" base="EditTopLevelPanel">
         <style>wxTAB_TRAVERSAL</style>
         <object class="wxBoxSizer" name="VideoControlsSizer" base="EditBoxSizer">
@@ -47,7 +47,7 @@
                                                                 <flag>wxALIGN_CENTER_VERTICAL</flag>
                                                                 <border>0</border>
                                                                 <option>0</option>
-                                                                <object class="wxStaticText" name="label_7" base="EditStaticText">
+                                                                <object class="wxStaticText" name="RendererLabel" base="EditStaticText">
                                                                     <attribute>1</attribute>
                                                                     <label>Renderer:</label>
                                                                 </object>
@@ -64,7 +64,7 @@
                                                                 <flag>wxALIGN_CENTER_VERTICAL</flag>
                                                                 <border>0</border>
                                                                 <option>0</option>
-                                                                <object class="wxStaticText" name="label_8" base="EditStaticText">
+                                                                <object class="wxStaticText" name="DeInterlaceLabel" base="EditStaticText">
                                                                     <attribute>1</attribute>
                                                                     <label>Deinterlace:</label>
                                                                 </object>
@@ -154,7 +154,7 @@
                                                                 <flag>wxALIGN_CENTER_VERTICAL</flag>
                                                                 <border>0</border>
                                                                 <option>0</option>
-                                                                <object class="wxStaticText" name="label_9" base="EditStaticText">
+                                                                <object class="wxStaticText" name="ScalerLabel" base="EditStaticText">
                                                                     <attribute>1</attribute>
                                                                     <label>Scaler:</label>
                                                                 </object>
@@ -171,7 +171,7 @@
                                                                 <flag>wxALIGN_CENTER_VERTICAL</flag>
                                                                 <border>0</border>
                                                                 <option>0</option>
-                                                                <object class="wxStaticText" name="label_10" base="EditStaticText">
+                                                                <object class="wxStaticText" name="LimitSpriteLabel" base="EditStaticText">
                                                                     <attribute>1</attribute>
                                                                     <label>Limit sprites</label>
                                                                 </object>
@@ -259,7 +259,7 @@
                                                                 <flag>wxALIGN_CENTER_VERTICAL</flag>
                                                                 <border>0</border>
                                                                 <option>0</option>
-                                                                <object class="wxStaticText" name="label_11" base="EditStaticText">
+                                                                <object class="wxStaticText" name="AccuracyLabel" base="EditStaticText">
                                                                     <attribute>1</attribute>
                                                                     <label>Accuracy:</label>
                                                                 </object>
@@ -276,7 +276,7 @@
                                                                 <flag>wxALIGN_CENTER_VERTICAL</flag>
                                                                 <border>0</border>
                                                                 <option>0</option>
-                                                                <object class="wxStaticText" name="label_12b" base="EditStaticText">
+                                                                <object class="wxStaticText" name="FullScreenLabel" base="EditStaticText">
                                                                     <attribute>1</attribute>
                                                                     <label>Full screen:</label>
                                                                 </object>
